k8s/service.yaml
# NodePort Service to expose fraud detection API
apiVersion: v1
kind: Service
metadata:
  name: fraud-detection-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: fraud-detection-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 30080
